<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.TransactionListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/grey_lite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_transaction_for_the_day"
            android:textSize="@dimen/sp_20"
            android:visibility="gone"/>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTotalAmount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:layout_weight="1"
                    android:text="@string/total_amount"
                    android:textSize="@dimen/sp_14"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tvCashIn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_weight="1"
                    android:text="@string/total_cash"
                    android:textSize="@dimen/sp_14"
                    android:visibility="gone"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvCashOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/total_expense"
                android:textSize="@dimen/sp_14"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                tools:listitem="@layout/transaction_item" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDataNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/data_not_available"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>